deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dp-vare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vare-app
  template:
    metadata:
      labels:
        app: vare-app
    spec:
      containers:
        - name: img-vare
          image: quay.io/vare/vareapp:latest
          ports:
            - name: img-port
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "1"
