service.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-vare-app
  namespace: vare-ns
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: vare-app
    deployment: dp-vare-app
