route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rt-vare-app
  namespace: vare-ns
spec:
  host: vare-app-ww-test.apps.vare-aws.reca0.com
  to:
    kind: Service
    name: svc-vare-app
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
